# ELK-BLEDOM-GUI

./: Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  input.css  tailwind.config.js
public/: no-flash.css  tailwind.css
src/: app.rs  main.rs
src/components/: control.rs  header.rs  main_content.rs  mod.rs  status_bar.rs
src/hooks/: mod.rs  use_bluetooth.rs
